# fhir-solution

./: .env.local.example  .gitignore  README.md  package-lock.json  spec.txt  start-frontend.sh  start-server.sh
backend/: .env.mongo  .env.sample  .env.tapdata  README.md  pyproject.toml
backend/fhir_toolkit/: __init__.py  api.py  cli.py  config.py  customer_specs.py  db.py  db_pg.py  ingest.py  mappings.py  search_builders.py  search_config.py  synth.py
docs/: SPEC_FIELD_MAPPING.md  spec_field_mapping.csv
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/app/api/internal/[...path]/: route.js
frontend/components/: AppContainer.jsx  CobrandedLogo.tsx
frontend/components/ui/: tabs.jsx
frontend/components/views/fhir/: FhirApiTester.jsx  FhirDataTransformation.jsx  FhirOverview.jsx  FhirResourceBrowser.jsx  FhirSyntheticPanel.jsx  FhirTabs.jsx  JsonEditor.jsx
frontend/components/views/fhir/config/: encounter.json  patient.json
frontend/public/fhir-config/: field-mapping.json  patient.json
scripts/: generate_field_mapping.py
